[project]
name = "hposuite_4ml"
license = { file = "LICENSE" }
version = "0.1.0"
dependencies = [
  "matplotlib",
  "seaborn"
  "scikit-learn",
  "openml", 
  "pandas", 
  "numpy==1.26.4",
  "tqdm",
  "IPython",
  "pyyaml>=6.0.1",
  "ConfigSpace==1.1.3",
  "xgboost",
  "lightgbm",
  "smac==2.2.0",
  "dehb",
  "optuna",
  "syne-tune",
  "syne-tune[basic]",
  "syne-tune[gpsearchers]"
  ]
requires-python = ">=3.10.12"
authors = [{ name = "Soham Basu", email = "soham.basu07@gmail.com" }]
readme = "README.md"
description = "HPOSuite for Machine Learning"
classifiers = [
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
  'Programming Language :: Python :: 3',
]
